tests/Fixtures/views/errors/runtime_loop.tpl
<ul>
{foreach $items as $item}
  <li>{$item->missingMethod()}</li>
{/foreach}
</ul>
